# GBrainStudio

./: .gitignore  LICENSE  README.md  README.zh-CN.md  README.zh-TW.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: release.yml
src/: App.vue  main.ts  router.ts  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: brains.rs  classifier.rs  factories.rs  gbrain_cli.rs  i18n.rs  lib.rs  llm.rs  main.rs  note_server.rs  note_view.rs  prereq.rs
src-tauri/src/config/: app_config.rs  gbrain_config.rs  mod.rs
src-tauri/src/converters/: csv_people.rs  extract_companies.rs  frontmatter.rs  mod.rs  pdf_text.rs  slug.rs  text_to_md.rs  wikilink.rs
src/i18n/: index.ts  languageConfig.ts
src/i18n/locales/: en.json  zh-CN.json  zh-TW.json
src/lib/: tauri.ts  utils.ts
src/stores/: brains.ts  config.ts
src/views/: BrainsView.vue  ConfigView.vue  FactoriesView.vue  OperationsView.vue
