[package]
name = "gbrain-studio"
version = "0.1.8"
edition = "2021"
description = "GBrainStudio — preprocessing & operations GUI for GBrain"
authors = ["朱國棟 (Charlie Chu)"]
license = "MIT"

[lib]
name = "gbrain_studio_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-store = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
csv = "1"
pdf-extract = "0.7"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
regex = "1"
anyhow = "1"
thiserror = "2"
encoding_rs = "0.8"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
log = "0.4"
pulldown-cmark = "0.12"
open = "5"
axum = "0.8"
percent-encoding = "2"

[profile.dev]
incremental = true

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
